Fix darkroast image case sensitivity issue

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     <div class="grid products">
       <!-- kart 1 -->
       <article class="card">
-        <img loading="lazy" src="{{ url_for('static', filename='img/darkroast.PNG') }}" alt="Espresso Blend">
+        <img loading="lazy" src="{{ url_for('static', filename='img/darkroast.png') }}" alt="Espresso Blend">
         <div class="card-body">
           <h3>Espresso Blend</h3>
           <p>Koyu kavrum, kakao ve bitter notalar.</p>
